Bug 946595 - High contrast themes on Windows 8 shouldn't be considered the default theme in CSS, r=jimm